--- a/app/src/main/res/layout/fragment_add_bank.xml
+++ b/app/src/main/res/layout/fragment_add_bank.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/limeWhite"
@@ -28,28 +30,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="start|center"
-                android:orientation="vertical">
+                android:gravity="start">
 
                 <TextView
-                    android:id="@+id/header_title"
-                    android:layout_width="match_parent"
+                    android:id="@+id/ForceExit"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:fontFamily="@font/poppins"
-                    android:text="Add Bank Details"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:layout_width="300dp"
-                    android:layout_height="300dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_forms_pana" />
+                    android:layout_gravity="start|center"
+                    android:drawablePadding="10dp"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:text="Add bank Account"
+                    android:textAllCaps="true"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_op_left" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -65,64 +60,114 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <EditText
-                    android:id="@+id/ifscCode"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/radius_background"
-                    android:gravity="center|start"
-                    android:hint="Bank IFSC Code"
-                    android:inputType="textCapCharacters"
-                    android:maxLength="11"
-                    android:padding="10dp"
-                    android:textSize="15sp" />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/accountNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/radius_background"
-                    android:gravity="center|start"
-                    android:hint="Bank Account Number"
-                    android:inputType="numberDecimal"
-                    android:maxLength="18"
-                    android:padding="10dp"
-                    android:textSize="15sp" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:gravity="start"
+                        android:hint="Account Holder"
+                        android:padding="0dp"
+                        app:boxStrokeColor="@color/black"
+                        app:boxStrokeWidth="0.5dp"
+                        app:boxStrokeWidthFocused="0.5dp"
+                        app:hintTextColor="@color/black"
+                        app:startIconDrawable="@drawable/ic_name">
 
-                <androidx.appcompat.widget.AppCompatSpinner
-                    android:id="@+id/spinnerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/radius_background"
-                    android:paddingEnd="10dp"
-                    android:textSize="15sp"
-                    android:visibility="visible" />
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/holderName"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:drawablePadding="0dp"
+                            android:gravity="center|start"
+                            android:inputType="textEmailAddress" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/idNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/radius_background"
-                    android:gravity="center|start"
-                    android:hint="@string/id_number"
-                    android:inputType="textCapCharacters"
-                    android:maxLength="10"
-                    android:padding="10dp"
-                    android:textAllCaps="true"
-                    android:textSize="15sp" />
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:gravity="start"
+                        android:hint="Bank Name"
+                        android:padding="0dp"
+                        app:boxStrokeColor="@color/black"
+                        app:boxStrokeWidth="0.5dp"
+                        app:boxStrokeWidthFocused="0.5dp"
+                        app:hintTextColor="@color/black"
+                        app:startIconDrawable="@drawable/ic_bank">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/bankname"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:drawablePadding="0dp"
+                            android:gravity="center|start"
+                            android:inputType="textEmailAddress" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/nameProfile"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:gravity="start"
+                        android:hint="IFSC Code"
+                        android:padding="0dp"
+                        app:boxStrokeColor="@color/black"
+                        app:boxStrokeWidth="0.5dp"
+                        app:boxStrokeWidthFocused="0.5dp"
+                        app:hintTextColor="@color/black"
+                        app:startIconDrawable="@drawable/ic_ifsc">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/bankIFSC"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:drawablePadding="0dp"
+                            android:gravity="center|start"
+                            android:inputType="text" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:gravity="start"
+                        android:hint="Account Number"
+                        android:padding="0dp"
+                        app:boxStrokeColor="@color/black"
+                        app:boxStrokeWidth="0.5dp"
+                        app:boxStrokeWidthFocused="0.5dp"
+                        app:hintTextColor="@color/black"
+                        app:startIconDrawable="@drawable/ic_number">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/accountNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:drawablePadding="0dp"
+                            android:gravity="center|start"
+                            android:inputType="numberDecimal" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -155,7 +200,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
@@ -167,11 +212,12 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_weight="1"
-                        android:background="@drawable/basic_shape"
-                        android:padding="10dp"
                         android:text="Continue" />
 
                     <Button
+                        style="?attr/materialButtonOutlinedStyle"
+                        app:strokeWidth="1dp"
+                        app:strokeColor="@color/black"
                         android:id="@+id/otp_skip_button"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
@@ -179,7 +225,6 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
                         android:layout_weight="1"
-                        android:background="@drawable/basic_shape2"
                         android:padding="10dp"
                         android:text="Do it Later" />
 
