--- a/app/src/main/res/layout/fragment_add_bank.xml
+++ b/app/src/main/res/layout/fragment_add_bank.xml
@@ -205,7 +205,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/otp_continue_button"
+                        android:id="@+id/addBank"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
@@ -218,7 +218,7 @@
                         style="?attr/materialButtonOutlinedStyle"
                         app:strokeWidth="1dp"
                         app:strokeColor="@color/black"
-                        android:id="@+id/otp_skip_button"
+                        android:id="@+id/skipButton"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_gravity="center"
