--- a/app/src/main/res/layout/fragment_bank_transfer.xml
+++ b/app/src/main/res/layout/fragment_bank_transfer.xml
@@ -2,196 +2,211 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:overScrollMode="never"
-    android:background="@color/limeWhite"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.bankTransfer">
+    android:background="@color/limeWhite"
+    android:overScrollMode="never">
+
     <LinearLayout
-        android:layout_gravity="center|top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
         android:orientation="vertical">
+
         <LinearLayout
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_alignParentTop="true"
             android:id="@+id/headingLayout"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="15dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/backButton"
-                android:layout_weight="1"
-                android:textColor="@color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="BACK"
-                android:drawablePadding="5dp"
                 android:layout_gravity="center"
-                android:gravity="center|start"
-                android:textStyle="bold"
-                android:textSize="15sp"
                 android:layout_marginStart="0dp"
+                android:layout_weight="1"
+                android:drawablePadding="5dp"
+                android:gravity="center|start"
+                android:text="BACK"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold"
                 app:drawableLeftCompat="@drawable/ic_op_left"
                 app:drawableTint="@color/black" />
         </LinearLayout>
+
         <TextView
-            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="15dp"
             android:text="@string/bank_heading"
             android:textColor="@color/black"
             android:textSize="23sp"
-            android:layout_marginBottom="15dp"
-            android:layout_gravity="start"
             android:textStyle="bold"
-            android:layout_marginStart="12dp" />
+            android:visibility="visible" />
+
         <LinearLayout
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:elevation="1dp"
-            android:background="@drawable/home_activity_shape_all"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="3dp"
             android:id="@+id/transaction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="3dp"
+            android:background="@drawable/home_activity_shape_all"
+            android:elevation="1dp"
+            android:gravity="center"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="@string/paying_to_account"
                 android:textColor="@color/black"
-                android:layout_gravity="start"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="10dp"/>
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal">
+
                 <ImageView
-                    android:layout_marginStart="10dp"
-                    android:layout_gravity="center"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/ic_air" />
-                <LinearLayout
-                    android:layout_marginTop="2dp"
-                    android:layout_marginStart="10dp"
                     android:layout_gravity="center"
-                    android:gravity="center|start"
-                    android:layout_weight="2"
-                    android:orientation="vertical"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/ic_air" />
+
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="2"
+                    android:gravity="center|start"
+                    android:orientation="vertical">
+
                     <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/demoUserName"
                         android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/demoUserName" />
+                        android:textSize="15sp" />
+
                     <TextView
-                        android:textSize="10sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
                         android:text="@string/demoAc"
-                        android:fontFamily="@font/poppins_medium"/>
+                        android:textSize="10sp" />
                 </LinearLayout>
 
                 <ImageView
-                    android:visibility="invisible"
-                    android:padding="5dp"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />
+                    android:padding="5dp"
+                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
+                    android:visibility="invisible" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/EditAccount"
-                android:foreground="?attr/selectableItemBackground"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="10dp"
+                android:foreground="?attr/selectableItemBackground"
                 android:orientation="horizontal">
+
                 <ImageView
-                    android:layout_gravity="center"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:src="@drawable/ic_edit_246_1" />
-                <LinearLayout
-                    android:layout_marginStart="10dp"
                     android:layout_gravity="center"
-                    android:gravity="center|start"
-                    android:layout_weight="2"
-                    android:orientation="vertical"
+                    android:src="@drawable/ic_edit_246_1" />
+
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="2"
+                    android:gravity="center|start"
+                    android:orientation="vertical">
+
                     <TextView
-                        android:layout_gravity="start|bottom"
-                        android:gravity="center"
-                        android:fontFamily="@font/poppins_medium"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Edit Account" />
+                        android:layout_gravity="start|bottom"
+                        android:fontFamily="@font/poppins_medium"
+                        android:gravity="center"
+                        android:text="Edit Account"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
                 </LinearLayout>
 
             </LinearLayout>
         </LinearLayout>
+
         <LinearLayout
-            android:background="@drawable/home_activity_shape_all"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="12dp"
+            android:background="@drawable/home_activity_shape_all"
+            android:gravity="center"
             android:orientation="vertical">
+
             <EditText
-                android:background="@drawable/key_board_amount_shape"
-                android:cursorVisible="false"
-                android:maxLength="6"
-                android:hint="@string/enter_amount"
-                android:theme="@style/myStyle"
                 android:id="@+id/amountText"
-                android:textColor="@color/black"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
+                android:background="@drawable/key_board_amount_shape"
+                android:cursorVisible="false"
                 android:gravity="center"
-                android:textSize="25sp"/>
+                android:hint="@string/enter_amount"
+                android:maxLength="6"
+                android:textColor="@color/black"
+                android:textSize="25sp"
+                android:theme="@style/myStyle" />
+
             <com.cashix.keyboard.custom_keyboard
-                android:background="@drawable/keyboard_layout_bg"
-                android:orientation="vertical"
                 android:id="@+id/customKeyboard"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@drawable/keyboard_layout_bg"
+                android:orientation="vertical" />
+
             <Button
                 android:id="@+id/swipePayButton"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="8dp"
-                android:gravity="center"
-                android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/button_shape_primary"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:text="MAKE PAYMENT"
-                android:textColor="@color/white"
-                android:background="@drawable/button_shape_primary">
-            </Button>
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </LinearLayout>
