--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="key_color">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="button_custom_keyboard">#FFFFFFFF</color>
     <color name="red">#BD4141</color>
     <color name="greyish">#E3DADA</color>
     <color name="limeWhite">#F4F7FF</color>
