--- a/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_item_list_dialog_list_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/limeWhite"
@@ -33,7 +34,6 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
                     android:layout_gravity="start"
                     android:layout_marginStart="0dp"
                     android:drawablePadding="5dp"
@@ -115,10 +115,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="card to bank transfer"
+                android:text="@string/select_payment_method"
                 android:textSize="12sp" />
 
-            <TextView
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/card_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -126,16 +127,9 @@
                 android:fontFamily="sans-serif-black"
                 android:text="₹ 5000"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/poppins_medium"
-                android:text="+90 service charge"
-                android:textSize="12sp" />
+                android:textSize="14sp"
+                tools:itemCount="2"
+                tools:listitem="@layout/fragment_item_list_dialog_list_dialog_item" />
 
         </LinearLayout>
 
@@ -143,8 +137,8 @@
             android:id="@+id/view_filler"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:background="@color/greyish"
-            android:layout_below="@id/paymentMethods"/>
+            android:layout_below="@id/paymentMethods"
+            android:background="@color/greyish" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -156,10 +150,10 @@
             android:visibility="visible">
 
             <LinearLayout
-                android:layout_marginStart="10dp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -182,10 +176,10 @@
             </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:layout_marginEnd="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginEnd="10dp"
                 android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:paddingStart="20dp"
                 android:paddingEnd="20dp"
